my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EVARPARAM_bug22466/EVARPARAM_bug22466.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EVARPARAM_bug22466.dml:14:5: In b.r
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EVARPARAM_bug22466.dml:14:22: error ENCONST: non-constant expression: i()
